<resources>
    <string name="app_name">InternProject</string>
    <string name="signup_txt">Sign Up</string>
    <string name="profile_txt">Profile Page</string>
    <string name="homepage_txt">Home Page</string>
    <string name="title_activity_home_page">HomePageActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hint_repassword">Şifre\'yi tekrar girin</string>
    <string name="btn_update">Güncelle</string>
    <string name="categories_prompt">Seçin</string>
    <string name="all">Hepsi</string>

    <string name="placeholder_username">bart.simpson</string>
    <string name="placeholder_email">bart.simpson@gmail.com</string>
    <string name="placeholder_reference">5.0 (50)</string>

    <!-- Nav menu text -->
    <string name="nav_menu_discount">Fırsatlar</string>
    <string name="nav_menu_coupon">Kuponlar</string>
    <string name="nav_menu_message">Mesajlarım</string>
    <string name="nav_menu_profile">Profilim</string>

    <string name="fab_share_discount">Fırsat Ekle</string>
    <string name="fab_share_coupon">Kupon Ekle</string>

    <string name="tab_layout_popular">Popülerler</string>
    <string name="tab_layout_recent">Yeniler</string>
    <string name="tab_layout_special">Sana Özel</string>

    <string name="please_wait">Lütfen Bekleyiniz</string>
    <string name="unexcepted_error">Beklenmedik bir hata oluştu.</string>
    <string name="title_activity_maps">Map</string>
</resources>
