<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_discount"
            android:icon="@drawable/ic_menu_discount"
            android:title="@string/nav_menu_discount" />
        <item
            android:id="@+id/nav_coupon"
            android:icon="@drawable/ic_menu_coupon"
            android:title="@string/nav_menu_coupon" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_menu_message"
            android:title="@string/nav_menu_message" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/nav_menu_profile" />
    </group>


</menu>
